myproject/k8s/apache2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: httpd
  template:
    metadata:
      labels:
        component: httpd
    spec:
      containers:
      - name: httpd-pod
        image: baze555/apachekubernetes
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name:  apache2-cluster-ip-service
spec:
  selector:
    component: httpd
  type: ClusterIP
  ports:
  - port:  80
    targetPort:  80
