myproject/k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
spec:
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        component: db
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
      containers:
      - name: mariadb-pod
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
         - name: db-storage
           mountPath: /var/lib/mysql
           subPath: mariadb
---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  selector:
    component: db
  type: ClusterIP
  ports:
  - port:  3306
    targetPort:  3306
