myproject/k8s/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  selector:
    matchLabels:
      component: wordpress
  template:
    metadata:
      labels:
        component: wordpress
    spec:
      containers:
      - name: wordpress-pod
        image: wordpress
        ports:    
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name:  wordpress-cluster-ip-service
spec:
  selector:
    component: wordpress
  # type: ClusterIP
  # ports:
  # - port:  80
  #   targetPort:  80
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31704
