myproject/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "False"
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
    - http:
       paths:
        - path: /foo
          backend:
            serviceName: apache2-cluster-ip-service
            servicePort: 80
        - path: /bar
          backend:
            serviceName: wordpress-cluster-ip-service
            servicePort: 80
